# xrotor-c

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: common.h  containers.h  spline.h  userio.h  vortex.h  xaero.h  xbend.h  xio.h  xnoise.h  xoper.h  xrotor.h  xutils.h
src/: containers.cpp  spline.cpp  userio.cpp  vortex.cpp  xaero.cpp  xio.cpp  xoper.cpp  xrotor.cpp  xutils.cpp
